# django3-vue2

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/config/: celery.py  settings.py  urls.py
backend/front/: urls.py  views.py
backend/templates/: base.html
backend/users/: models.py
backend/users/templates/users/: signin.html  signup.html
